<resources>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    <string name="app_name">BlockLauncher Pro</string>
    <string name="select_file">Choose file from SD</string>
    <string name="languages_supported">,de,en,es,fi,fr,hr,in,it,ko,pl,pt,ru,zh_CN,zh_TW</string>
    <string name="pref_texture_pack">Texture Pack</string>
    <string name="pref_zz_longvibration">Extra-long vibration</string>
    <string name="pref_zz_longvibration_summary">Increase the vibration length by 5x</string>
    <string name="pref_zz_safe_mode">Safe mode</string>
    <string name="pref_zz_safe_mode_summary">Disables all modifications</string>
    <string name="pref_zz_custom_dpi">Custom DPI</string>
    <string name="pref_zz_custom_dpi_summary">Change the reported screen density to change size of controls - leave blank to disable</string>
    <string name="pref_ctrl_title">Controls</string>
    <string name="pref_gfx_title">Graphics</string>
    <string name="pref_addons_title">Addons and patches</string>
    <string name="pref_textures_title">Textures</string>
    <string name="pref_support_title">Support</string>
    <string name="texture_pack_unable_to_load">Unable to load texture pack.</string>
    <string name="extracting_textures">Backing up original APK</string>
    <string name="extract_textures_success">Successfully set original APK as texture pack.</string>
    <string name="extract_textures_error">Unable to access original APK.</string>
    <string name="extract_textures_no_root">Unable to gain superuser access - are you rooted?</string>
    <string name="extract_textures_need_update">It seems you are using textures from an older version of Minecraft PE. Please run \"Extract original textures with root access\" in the options screen again to update textures.</string>
    <string name="pref_zz_hovercar_hide">Hide patch manager button</string>
    <string name="pref_zz_manage_scripts">Manage ModPE Scripts  ①</string>
    <string name="pref_zz_script_enable">Enable ModPE Scripts support</string>
    <string name="pref_zz_sensorcontrol">Sensor controls</string>
    <string name="pref_zz_sensorcontrol_summary">Control the player by rotating your device. Requires ModPE Scripts to be turned on.</string>
    <string name="pref_zz_show_insert_text">Show \"Insert text\" option in-game patch manager</string>
    <string name="pref_zz_language_override">Language</string>
    <string name="pref_zz_language_override_default">Default</string>
    <string name="pref_zz_legacy_keyboard_input">Use old keyboard input code</string>
    <string name="pref_zz_legacy_keyboard_input_summary">A fix to keyboard bugs in the new 0.8.x update</string>
    <string name="pref_zz_skin_download_source">PC skins</string>
    <string name="skin_download_do_not_download">Do not download skins</string>
    <string name="skin_download_download_pc">Download skins based on PC username</string>
    <string name="nerdy_stuff_page">Nerdy stuff</string>
    <string name="dump_libminecraftpe">Dump libminecraftpe.so from memory</string>
    <string name="nerdy_stuff_are_useless">Pretty much everything on this page is useless. They are here for troubleshooting bugs.</string>
    <string name="restart_app">Restart app</string>
    <string name="manage_patches">Manage patches</string>
    <string name="world_create_title">Create world</string>
    <string name="world_name_prompt">Name:</string>
    <string name="world_seed_prompt">Seed:</string>
    <string name="world_gamemode_prompt">Game Mode:</string>
    <string name="gamemode_survival">Survival</string>
    <string name="gamemode_creative">Creative</string>
    <string name="copy_world_title">Save world</string>
    <string name="manage_patches_import">Import</string>
    <string name="manage_patches_import_error">Failed to import patch</string>
    <string name="manage_patches_too_many">Upgrade to BlockLauncher Pro to patch more than 3 patches</string>
    <string name="manage_patches_delete">Delete</string>
    <string name="manage_patches_crash_safe_mode">BlockLauncher has detected a recent crash. Safe Mode has been enabled to prevent further crashes by misbehaving patches. In this mode, all patches are disabled. Do you want to continue in Safe Mode without patches or return to normal patching mode?</string>
    <string name="manage_patches_import_confirm">Do you want to import this patch?</string>
    <string name="manage_patches_import_done">Patch imported</string>
    <string name="manage_patches_enable">Enable</string>
    <string name="manage_patches_disable">Disable</string>
    <string name="manage_patches_disabled">(disabled)</string>
    <string name="manage_patches_invalid_patches">These patches cannot be patched because they are not in a format that BlockLauncher recognizes:</string>
    <string name="manage_patches_info">Information</string>
    <string name="manage_patches_path">Path</string>
    <string name="skin_import_confirm">Do you want to set this skin?</string>
    <string name="texturepack_import_confirm">Do you want to set this texturepack?</string>
    <string name="script_import_confirm">Do you want to import this ModPE Script?</string>
    <string name="skin_imported">Skin set</string>
    <string name="texturepack_imported">Texturepack set</string>
    <string name="script_imported">ModPE Script imported</string>
    <string name="manage_addons">Manage addons</string>
    <string name="about_about">About BlockLauncher</string>
    <string name="about_copyright_pro">Copyright © 2013–2014 Zhuowei Zhang. Do not distribute without permission.</string>
    <string name="about_librarycredits">This program uses the aFileChooser library by Paul Burke. \n This program contains code from Snowbound\'s PTPatchTool, licensed under the Eclipse Public License. \n This program contains a modified version of NathanX\'s Slickcraft texture pack: used with permission.\n Parts of the built-in texture pack is based on RepetiCraft by Theevilpplz and used with permission.\n This program contains a version of the Cydia Substrate framework by Saurik, licensed under the GNU Lesser General Public License.\n This program uses the libsuperuser library by Chainfire.\n This program contains a copy of the Rhino JavaScript engine from the Mozilla project.\n For full licensing information, check the Minecraft Forums thread.\n</string>
    <string name="about_thankscommunity">This application was made possible by the work of many talented translators, testers, and programmers. Thank you.\nView the Minecraft Forums thread for a list of contributors.</string>
    <string name="about_go_to_forums">Open Minecraft Forums thread for BlockLauncher</string>
    <string name="no_minecraft_installed">BlockLauncher cannot find a copy of Minecraft PE on your device. This app is designed to patch the full version of Minecraft Pocket Edition by Mojang.</string>
    <string name="firstlaunch_title">Welcome to BlockLauncher!</string>
    <string name="firstlaunch_generic_intro">Thank you for trying BlockLauncher. BlockLauncher starts your copy of Minecraft Pocket Edition and adds additional features to it through patches, addons, skins, and textures.</string>
    <string name="firstlaunch_jelly_bean">Your device runs Android Jelly Bean or newer, so BlockLauncher cannot access the default textures. The demo texture pack has been enabled so you can test the launcher.</string>
    <string name="firstlaunch_see_options">To get started with BlockLauncher, tap the wrench icon at the top of the screen. For more help, visit the Minecraft Forum thread.</string>
    <string name="firstlaunch_help">Help</string>
    <string name="version_mismatch_message">This version of Minecraft PE is not supported by BlockLauncher. BlockLauncher will run in safe mode temporarily. Please check for updates to BlockLauncher as support may be added in a newer version.</string>
    <string name="feature_not_supported">This feature is not supported in BlockLauncher yet.</string>
    <string name="hovercar_options">Launcher options (restart required)</string>
    <string name="hovercar_insert_text">Insert text (keyboard issue workaround)</string>
    <string name="safe_mode_exit">返回正常模式</string>
    <string name="safe_mode_continue">继续运行</string>
    <string name="script_import_from">Import script from</string>
    <string name="script_import_from_local">Local storage ②</string>
    <string name="script_import_from_cfgy">Treebl\'s official repo</string>
    <string name="script_import_from_url">Web address</string>
    <string name="script_import_from_clipboard">Clipboard</string>
    <string name="script_import_from_clipboard_name">Enter name for script</string>
    <string name="script_import_from_clipboard_code">Code to import</string>
    <string name="script_import_from_cfgy_id">Enter the ID of the script to import</string>
    <string name="script_import_from_url_enter">Enter the address of the script to import</string>
    <string name="script_import_too_many">Upgrade to BlockLauncher Pro to patch more than one script at a time</string>
    <string name="script_execution_error">An error occurred in a ModPE Script</string>
    <string name="script_disabled_in_multiplayer">Your ModPE Scripts have been disabled in multiplayer. They will be re-enabled when you disconnect from the server.</string>
    <string name="script_minecraft_version_incompatible">ModPE scripts are not supported on your version of Minecraft PE. Some methods in scripts may not function, or may crash the launcher. Use at your own risk.</string>
    <string name="script_import_from_intent_warning">Do you want to import this script? It will get access to the same resources as your BlockLauncher instance, including potentially your passwords and other sensitive information.</string>
    <string name="script_view_source">View source</string>
    <string name="script_too_many_errors">has been disabled because it encountered too many errors. Sorry!</string>
    <string name="pref_other_title">Other</string>
    <string name="pref_zz_legacy_live_patch">Use old live patching code from BlockLauncher 1.6.8</string>
    <string name="pref_zz_legacy_live_patch_summary">Turn this on if BlockLauncher stopped working after the 1.6.9 update.</string>
    <string name="pref_zz_immersive_mode">Fullscreen mode</string>
    <string name="pref_zz_immersive_mode_summary">Hide the navigation buttons during gameplay</string>
    <string name="pref_zz_watch_recording">Watch recordings</string>
    <string name="pref_zz_reshare_last_recording">Reshare last recording</string>
    <string name="pref_zz_enable_kamcord">Enable experimental screen recorder</string>
    <string name="about_kamcord_credits">Certain video and audio capture functionality is Powered by Kamcord™ (kamcord.com), and your use of such functionality is subject to the Kamcord Terms of Use (kamcord.com/tos) and Privacy Policy (kamcord.com/privacy)</string>
    <string name="about_fmod_credits">Audio engine : FMOD Studio by Firelight Technologies</string>
    <string name="texture_entry_up">Up</string>
    <string name="texture_entry_down">Down</string>
    <string name="texture_entry_remove">Remove</string>
    <string name="about_oss_license_info">View library licenses</string>
    <string name="pref_zz_signal_handler">Write crash logs to shared storage</string>
    <string name="pref_zz_theme_dark">Use dark theme</string>
    <string name="pref_zz_reimport_scripts">Reimport modified scripts at startup</string>
    <string name="pref_zz_desktop_gui">Use Desktop GUI</string>
    <string name="pref_zz_desktop_gui_summary">Change inventory and crafting windows to Desktop mode</string>
</resources>