<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/about_appnametext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="15pt" />

        <TextView
            android:id="@+id/rofl_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15pt"
            android:typeface="monospace"
            android:visibility="gone" />

        <TextView
            android:id="@+id/about_appversiontext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11pt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_thankscommunity" />

        <Button
            android:id="@+id/about_go_to_forums_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_go_to_forums" />

        <TextView
            android:id="@+id/about_librarycreditstext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_librarycredits" />

        <Button
            android:id="@+id/about_oss_license_info_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_oss_license_info" />

        <TextView
            android:id="@+id/about_kamcordcreditstext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_kamcord_credits" />

        <TextView
            android:id="@+id/about_fmodcreditstext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_fmod_credits" />

        <TextView
            android:id="@+id/about_copyrighttext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_copyright_pro" />
    </LinearLayout>
</ScrollView>
