<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"

        card_view:cardCornerRadius="4dp">
        <!--    style="?android:attr/cardStyle">-->
        <RelativeLayout
            android:id="@+id/texture_entry_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/texture_entry_img"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingRight="8dp" />

            <TextView
                android:id="@+id/texture_entry_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/texture_entry_img"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/texture_entry_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/texture_entry_name"
                android:layout_toRightOf="@+id/texture_entry_img"
                android:textSize="14sp" />

            <Button
                android:id="@+id/texture_entry_up"
                style="@style/ButtonBar.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/texture_entry_desc"
                android:layout_toRightOf="@+id/texture_entry_img"
                android:drawableLeft="@drawable/ic_keyboard_arrow_up_tinted_18dp"
                android:onClick="onTextureUpClick"
                android:text="@string/texture_entry_up" />

            <Button
                android:id="@+id/texture_entry_down"
                style="@style/ButtonBar.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/texture_entry_desc"
                android:layout_toRightOf="@+id/texture_entry_up"
                android:drawableLeft="@drawable/ic_keyboard_arrow_down_tinted_18dp"
                android:onClick="onTextureDownClick"
                android:text="@string/texture_entry_down" />

            <Button
                android:id="@+id/texture_entry_remove"
                style="@style/ButtonBar.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/texture_entry_desc"
                android:layout_toRightOf="@+id/texture_entry_down"
                android:drawableLeft="@drawable/ic_delete_tinted_18dp"
                android:onClick="onTextureRemoveClick"
                android:text="@string/texture_entry_remove" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
